--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
     "react-pdf": "^10.3.0",
+    "react-resizable-panels": "^4.6.2",
     "remark-gfm": "^4.0.1",
     "zustand": "^5.0.11"
   },
